--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -1,5 +1,6 @@
 <html>
         <body>
+            <%- include ./partial/menu.ejs%>
             <form action="/item/edit/<%=id%>" method='post'>
                 <input type='text' name='name'>
                 <input type='text' name='brand'>
