--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,5 @@
 <html>
     <body>
-        <a href='/suppliers'>Suppliers</a>
-        <a href='/item'>Items</a>
-        <a href='/item/search'>Search</a>
+        <%- include ./partial/menu.ejs%>
     </body>
 </html>
