--- a/views/addItem.ejs
+++ b/views/addItem.ejs
@@ -1,5 +1,6 @@
 <html>
         <body>
+            <%- include ./partial/menu.ejs%>
             <form action="/item/add" method='post'>
                 <input type='text' name='name'>
                 <input type='text' name='brand'>
