--- a/views/addSupplier.ejs
+++ b/views/addSupplier.ejs
@@ -1,5 +1,6 @@
 <html>
     <body>
+        <%- include ./partial/menu.ejs%>
         <form action="/suppliers/add" method='post'>
             <input type='text' name='name'>
             <input type='text' name='kota'>
