--- a/views/supplier.ejs
+++ b/views/supplier.ejs
@@ -1,5 +1,24 @@
 <html>
+        <head>
+                <script>
+                    function formatuang (number){
+                        reverse = number.toString().split('').reverse();
+                        arr= [];
+                        for(var i = 0; i<reverse.length;i++){
+                            if((i+1) % 3 === 0 && (i+1) !== reverse.length){
+                            arr.push(reverse[i]);
+                            arr.push('.');
+                            }else{
+                            arr.push(reverse[i]);
+                            }
+                        }
+                        document.write('Rp. '+arr.reverse().join(''))
+                        // return 'Rp. '+arr.reverse().join('');
+                        }
+                    </script>
+            </head>
     <body>
+            <%- include ./partial/menu.ejs%>
         <table>
             <tr>
                 <th>Id</th>
@@ -14,7 +33,8 @@
                     <td><%=d.kota%></td>
                     <td>
                         <%d.Items.forEach(x => {%>
-                            <%=x.name%> @ <%=x.SupplierItem.dataValues.price%><br>
+                            <%=x.name%> @ <script>formatuang(`<%=x.SupplierItem.dataValues.price%>`)</script><br>
+                            
                         <%})%>
                     </td>
                     <td><a href='/suppliers/assign/<%=d.id%>'>Assign</a></td>
@@ -25,6 +45,5 @@
            
         </table>
         <a href='/suppliers/add'>Add a supplier</a>
-        <a href='/'>Home</a>
     </body>
 </html>
