--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,5 +6,42 @@
   </head>
   <body>
     <% include partials/header.ejs %>
+    <form action="/search" method="post">
+      Name<input type="text" name="name"><br />
+      Min<input type="text" name="min"><br />
+      Max<input type="text" name="max"><br />
+      <input type="submit" value="SUBMIT">
+    </form>
+
+    <% if(hasOwnProperty('data')){
+      %>
+      <table>
+        <tr>
+          <td>ID</td>
+          <td>Item Name</td>
+          <td>Supplier Name</td>
+          <td>Price</td>
+        </tr>
+        <% for(var i =0;i<data.length;i++){
+          %>
+          <tr>
+            <td>
+              <%=i+1%>
+            </td>
+            <td>
+              <%=data[i].Item.brand + " " +data[i].Item.name%>
+            </td>
+            <td>
+              <%=data[i].Supplier.name%>
+            </td>
+            <td>
+              <%=data[i].harga%>
+            </td>
+          </tr>
+          <%
+        }%>
+      </table>
+      <%
+    }%>
   </body>
 </html>
