--- a/views/supplier.ejs
+++ b/views/supplier.ejs
@@ -11,6 +11,8 @@
    <th>ID</th>
    <th>Name</th>
    <th>Kota</th>
+   <th>List Item</th>
+   <th>Add Item</th>
    <th>Action</th>
  </tr>
  <% dataSupplier.forEach(Supplier=>{%>
@@ -18,6 +20,16 @@
    <td><%=Supplier.id%></td>
    <td><%=Supplier.name%></td>
    <td><%=Supplier.kota%></td>
+   <% if(Supplier.Items){%>
+     <td>
+     <% Supplier.Items.forEach(Item=>{%>
+       <%=Item.name + '@' + Item.SupplierItem.price %><br>
+     <%})  %>
+   </td>
+   <%}else{%>
+     <td>No Item Yet</td>
+   <%}%>
+   <td><a href="/suppliers/<%=Supplier.id%>/additem">Assign Item</a></td>
    <td><a href="/suppliers/edit/<%=Supplier.id%>">edit</a> | <a href="/suppliers/delete/<%=Supplier.id%>">delete</a> </td>
  </tr>
  <%}) %>
