--- a/views/suppliers.ejs
+++ b/views/suppliers.ejs
@@ -28,9 +28,9 @@
       <tr>
         <td><%=row.id%></td>
         <td><%=row.name%></td>
-        <td><%=row.kota%>a</td>
-        <td><a href="/suppliers/edit/row.id">Edit</a></td>
-        <td><a href="/delete/row.id">Delete</a></td>
+        <td><%=row.kota%></td>
+        <td><a href="/suppliers/edit/<%=row.id%>">Edit</a></td>
+        <td><a href="/suppliers/delete/<%=row.id%>">Delete</a></td>
       </tr>
       <%})%>
 
