--- a/views/items-add.ejs
+++ b/views/items-add.ejs
@@ -13,7 +13,6 @@
 <body>
 
   <div style="width:770px">
-
     <form action="/items/add" method="post">
           <div class="field">
             <div class="control has-icons-left has-icons-right">
@@ -40,6 +39,8 @@
             </div>
           </div>
           <div style="text-align: center; margin-top:33px;" class="control">
+            <h4 style="color:red; text-decoration: none; font-weight:bold; text-align: center; margin-bottom:-22px;" href="#"><%=pesanError%></h4>
+            
             <!-- <button type="submit" value="Submit" class="button is-primary">Submit</button> -->
             <input class="button is-success is-outlined is-medium" type="submit" value="Submit input">
             <input class="button is-success is-outlined is-medium" type="reset" value="Reset input">
