--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,15 +8,43 @@
   <link rel="stylesheet" href="assets/style/bulma.min.css">
   <link rel="stylesheet" href="assets/style/custom.css">
   <title>Index</title>
+  <style>
+      ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #333;
+      }
+
+      li {
+          float: left;
+      }
+
+      li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+      }
+
+      li a:hover {
+          background-color: #111;
+      }
+</style>
 </head>
-<body style="text-decoration:none;">
+<body>
 
+  <ul>
+    <li><a class="active" href="/">index</a></li>
+    <li><a href="/suppliers">suppliers</a></li>
+    <li><a href="/items">items</a></li>
+  </ul>
 
-
-  <h1>index</h1>
+  <!-- <h1>index</h1>
   <h1><a href="/suppliers">suppliers</a></h1>
-  <h1><a href="/items">items</a></h1>
-
+  <h1><a href="/items">items</a></h1> -->
 
 </body>
 </html>
