--- a/views/items.ejs
+++ b/views/items.ejs
@@ -9,8 +9,42 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
   <link rel="stylesheet" href="assets/style/custom.css">
   <title>items</title>
+  <style>
+      ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #333;
+      }
+
+      li {
+          float: left;
+      }
+
+      li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+      }
+
+      li a:hover {
+          background-color: #111;
+      }
+</style>
 </head>
 <body>
+
+  <ul style="margin-bottom:5%;">
+    <li><a class="active" href="/">index</a></li>
+    <li><a href="/suppliers">suppliers</a></li>
+    <li><a href="/items">items</a></li>
+  </ul>
+
+
+
   <div class="container-cust">
 
     <table class="table is-striped">
