--- a/views/suppliers.ejs
+++ b/views/suppliers.ejs
@@ -9,8 +9,42 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.0/css/bulma.min.css">
   <link rel="stylesheet" href="assets/style/custom.css">
   <title>Suppliers</title>
+  <style>
+      ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          background-color: #333;
+      }
+
+      li {
+          float: left;
+      }
+
+      li a {
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+      }
+
+      li a:hover {
+          background-color: #111;
+      }
+</style>
 </head>
 <body>
+
+  <ul style="margin-bottom:5%;">
+    <li><a class="active" href="/">index</a></li>
+    <li><a href="/suppliers">suppliers</a></li>
+    <li><a href="/items">items</a></li>
+  </ul>
+
+
+
   <div class="container-cust">
 
     <table class="table is-striped">
@@ -18,6 +52,8 @@
         <th>ID</th>
         <th>NAME</th>
         <th>KOTA</th>
+        <th>LIST ITEM</th>
+        <th>ADD ITEM</th>
         <th>ACTIONS</th>
       </tr>
       <% for(let data=0; data<data_SuppliersToEjs.length; data++){%>
@@ -25,13 +61,29 @@
         <td><%=data_SuppliersToEjs[data].id%></td>
         <td><%=data_SuppliersToEjs[data].name%></td>
         <td><%=data_SuppliersToEjs[data].kota%></td>
+        <% list=''
+           if(data_SuppliersToEjs[data].SupplierItems === null){
+             list = data_SuppliersToEjs[data].SupplierItems
+           }else{
+             list = 'No Item Yet'
+           }
+        %>
+        <td><%=list%></td>
+        <td>
+          <a class="button is-info is-outlined is-small" href='suppliers/<%=data_SuppliersToEjs[data].id%>/additem'>
+          <span class="icon is-small">
+            <i class="fa fa-pencil"></i>
+          </span>
+          <span>Assign Item</span>
+          </a>
+        </td>
         <td style="margin-left:-5px;">
               <a class="button is-info is-outlined is-small" href='suppliers/edit/<%=data_SuppliersToEjs[data].id%>'>
               <span class="icon is-small">
                 <i class="fa fa-pencil"></i>
               </span>
               <span>Edit</span>
-            </a>
+              </a>
               <a onclick="myFunction()" class="button is-danger is-outlined is-small" href="suppliers/delete/<%=data_SuppliersToEjs[data].id%>">
               <span class="icon is-small">
                 <i class="fa fa-times"></i>
