--- a/views/suppliers.ejs
+++ b/views/suppliers.ejs
@@ -31,7 +31,7 @@
           <td>
             <% let j = 1
               r.Items.forEach(ri => { %>
-                <%= j %>. <%= ri.name %>
+                <%= j %>. <%= ri.name %> <br>
             <% j++ }) %>
           </td>
         <% }else{ %>
