--- a/views/item.ejs
+++ b/views/item.ejs
@@ -14,6 +14,7 @@
           <th>Nama</th>
           <th>Brand</th>
           <th>Kode Item</th>
+          <th>Supplier</th>
           <th>Opsi</th>
         </tr>
         <%items.forEach(item=>{%>
