--- a/views/additem.ejs
+++ b/views/additem.ejs
@@ -45,13 +45,12 @@
             <td><input type="submit" value="Submit"></td>
           </tr>
         </form>
-        <%if(err){%>
-          <div class="alert">
-             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-             This is an alert box.
-            </div>
-          <%}%>
       </tbody>
+      <tr>
+        <%if(error){%>
+          <p><%=error.error[0].message%></p>
+          <%}%>
+        </tr>
     </table>
   </body>
 </html>
