--- a/views/items/add.ejs
+++ b/views/items/add.ejs
@@ -7,7 +7,14 @@
   </head>
   <body>
   	<a href="/">Home </a><a href="/suppliers">Suppliers </a><a href="/items">Items </a>
-    <h1>Add Item</h1>    
+    <h1>Add Item</h1>
+
+    <%# err.errors.forEach((msg) => { %>
+      <!-- <ul> -->
+      	<!-- <li><%# msg.message %></li> -->
+      <!-- </ul> -->
+	<%# }) %>
+
     <form action="/items/add" method="POST">
 	  Name:<br>
 	  <input type="text" name="name">
