--- a/views/editItem.ejs
+++ b/views/editItem.ejs
@@ -19,8 +19,8 @@
         <tbody>
           <tr>
             <td><input type="text" name="name" value="<%= dataItem.name %>" required></td>
-            <td><input type="text" name="kota" value="<%= dataItem.brand %>" required></td>
-            <td><input type="text" name="kota" value="<%= dataItem.codeitem %>" required></td>
+            <td><input type="text" name="brand" value="<%= dataItem.brand %>" required></td>
+            <td><input type="text" name="codeitem" value="<%= dataItem.codeitem %>" required></td>
           </tr>
           <tr>
             <td><input type="submit" value="Submit"> <a href="/items"><button>Cancel</button></a></td>
