--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
     <h1>E-Commerce</h1>
     <a href="/items">Items</a>
     <a href="/suppliers">Supplier</a>
+    <a href="/search">Search</a>
   </body>
 </html>
