--- a/views/items.ejs
+++ b/views/items.ejs
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <a href="/">Home</a>
     <a href="/items/add">Add Items</a>
     <table border="1" style="width:30%">
     <thead>
