--- a/views/suppliers/suppliers.ejs
+++ b/views/suppliers/suppliers.ejs
@@ -55,7 +55,7 @@
               <td>
                 <a href="/suppliers/assign/<%= rows.id %>">
                   <button type="button" class="btn btn-danger btn-sm custom">
-                    <i class="fa fa-phone"> Assign Item</i>
+                    <i class="fa fa-plus"> Assign Item</i>
                   </button>
                 </a>
               </td>
