--- a/views/items/items.ejs
+++ b/views/items/items.ejs
@@ -14,7 +14,7 @@
       <% if (dataError) { %>
         <div class="alert alert-danger alert-dismissable">
           <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
-            <strong>Perhatian!</strong> Code Item harus diawali dengan HP | SW | LP dan diikuti’ dengan 4 digit angka
+            <strong>Perhatian!</strong> Code Item harus diawali dengan HP | SW | LP dan diikuti’ dengan 4 digit angka dan UNIQUE
         </div>
       <% } %>
       <h2 class="text-center"><strong>TABLE SUPPLIER</strong></h2>
