--- a/views/supplier-add.ejs
+++ b/views/supplier-add.ejs
@@ -3,6 +3,11 @@
 	<p><%=JSON.stringify(err, null, 4)%></p>
 <%}%>
 <form action="/suppliers/add" method="POST">
-	<input type="submit" value="Test">
+	Name:<br><input type="text" name="name">
+	<br>
+	Kota:<br><input type="text" name="kota">
+	<br>
+	<br>
+	<input type="submit" value="Add Supplier">
 </form>
 <%- include('partials/footer') %>
