--- a/views/suppliers.ejs
+++ b/views/suppliers.ejs
@@ -26,7 +26,7 @@
             <td><%= row.id %></td>
             <td><%= row.name %></td>
             <td><%= row.kota %></td>
-            <td><a href="/suppliers/assign/<%= row.id %>">Edit</td></a>
+            <td><a href="/suppliers/additem/<%= row.id %>">Assign Item</td></a>
             <td><a href="/suppliers/edit/<%= row.id %>">Edit</td></a>
             <td><a href="/suppliers/delete/<%= row.id %>">Delete</td></a>
           </tr>
