--- a/views/form_add_item_supplier.ejs
+++ b/views/form_add_item_supplier.ejs
@@ -25,8 +25,8 @@
       <% if(supplier.Supplieritems.length != 0){
         supplier.Supplieritems.forEach(item => { %>
           <tr>
-            <td colspan="2"><%= item.name %></td>
-            <td><%= item.price %></td>
+            <td colspan="2"><%= supplier.Items[0].name %></td>
+            <td>@<%= item.price %></td>
           </tr>
         <% })
       } else { %>
